update build configuration and instructions