@@ -11,30 +11,22 @@
 
 ### Сборка и запуск
 Потребуются:
-- JDK 13
+- Java 13
 - PostgreSQL 12
-- Intellij Idea + Maven
+- Maven
 
 #### Подготовка БД
 1. Создать базу данных converter
-2. Выполнить скрипт coverter_postgres_dump для создания элементов БД и вставки начальных данных. Пример команды запуска скрипта для Windows:
-    > psql -U username -d converter -f C:\coverter_postgres_dump
+2. Выполнить скрипт coverter_postgres_dump для создания элементов БД и вставки начальных данных:
+    > psql -U username -d converter -f coverter_postgres_dump
 3. В файле /application.properties указать параметры подключения к БД: адрес, логин, пароль
 
-#### Сборка через Intellij Idea
-
-##### Community Edition
-Открыть проект, запустить командой Maven
-   > mvn spring-boot:run -f pom.xml 
-
-##### Ultimate edition
-1. Открыть проект
-2. В настройках проекта указать Projeсt SDK: 13, Project language level: 13 (Preview)
-3. В настройках модуля converter указать Language level: 13 (Preview)
-4. Создать конфигурацию запуска Spring Boot, указать Main class:
-    > com.konovalov.converter.ConverterApplication
+#### Сборка
+   > mvn clean package
 
 #### Запуск
+   > java --enable-preview -jar converter.jar
+
 Стартовая страница приложения доступна по адресу localhost:8080. Доступы для входа:  
 user1 password1  
 user2 password2
